--- a/CSManagement/CSManagement/Views/Students/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Create.cshtml
@@ -149,8 +149,9 @@
                 </div>
             </div>
 
-        <div class="box-footer">
-            หมายเหตุ : กรุณาตรวจสอบข้อมูลให้ถูกต้องก่อนทำการกดบันทึก
+            <div class="box-footer">
+                หมายเหตุ : กรุณาตรวจสอบข้อมูลให้ถูกต้องก่อนทำการกดบันทึก
+            </div>
         </div>
     </section>
 }
