--- a/CSManagement/CSManagement/Views/Histories/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Histories/Index.cshtml
@@ -1,58 +1,78 @@
 ﻿@model IEnumerable<CSManagement.Models.History>
 
 @{
-    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
 }
 
-<h2>Index</h2>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">จัดการข้อมูลการทำงานศิษย์เก่า</h1>
+                    <div style="float:right">
+                        <a class="btn btn-success" href="@Url.Action("Create", "Histories")"><i class="fa fa-plus"></i> เพิ่มข้อมูลการทำงาน</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.HIS_Jobname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HIS_Year)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HIS_Company)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Job.JOB_Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Student.Stu_Name)
-        </th>
-        <th></th>
-    </tr>
+        <div class="box-body">
+            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th style="text-align:center">ที่</th>
+                        <th>@Html.DisplayNameFor(model => model.HIS_Jobname)</th>
+                        <th style="text-align:center">ชื่อ-นามสกุล</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.HIS_Company)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Job.JOB_Name)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.HIS_Year)</th>
+                        <th style="text-align:center">จัดการข้อมูล</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td style="text-align:center">@(i++)</td>
+                            <td>@Html.DisplayFor(modelItem => item.HIS_Jobname)</td>
+                            <td>@item.Student.Stu_Title@item.Student.Stu_Name @item.Student.Stu_Surname</td>
+                            <td>@Html.DisplayFor(modelItem => item.Job.JOB_Name)</td>
+                            <td>@Html.DisplayFor(modelItem => item.HIS_Company)</td>
+                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.HIS_Year)</td>
+                            <td style="text-align:center">
+                                <a class="btn btn-warning" href="@Url.Action("Edit", "Histories", new { id = item.HIS_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
+                                <a class="btn btn-info" href="@Url.Action("Details", "Histories", new { id = item.HIS_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                                <a class="btn btn-danger" href="@Url.Action("Delete", "Histories", new { id = item.HIS_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.HIS_Jobname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HIS_Year)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HIS_Company)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Job.JOB_Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Student.Stu_Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.HIS_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.HIS_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.HIS_ID })
-        </td>
-    </tr>
+<link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+@section Scripts{
+    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#example1').DataTable({
+                scrollCollapse: true,
+                autoWidth: false,
+                responsive: true,
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                },
+                columnDefs: [{
+                    targets: "datatable-nosort",
+                    orderable: false
+                }]
+            });
+        });
+    </script>
 }
-
-</table>
