--- a/CSManagement/CSManagement/Views/Projects/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Details.cshtml
@@ -5,157 +5,133 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">รายละเอียดข้อมูลปริญญานิพนธ์</h1>
+                    <div style="float:right">
+                        <a class="btn btn-default" href="@Url.Action("Index", "Projects")"><i class="fa fa-mail-reply"></i> ย้อยกลับ</a>
+                        <a class="btn btn-warning" href="@Url.Action("Edit", "Projects", new { id = Model.Pj_ID })"><i class="fa fa-edit"></i>แก้ไขข้อมูล</a>
+                    </div>
+                </div>
+            </div>
 
-<div>
-    <h4>Project</h4>
-    <hr />
-    <dl class="dl-horizontal">
+        </div>
 
-        <dt>
-            ชื่อนักศึกษา
-        </dt>
+        <div class="box-body">
+            <table id="w0" class="table table-striped table-bordered detail-view" style="font-size:18px">
+                <tbody>
+                    <tr>
+                        <th width="200px">รหัสนักศึกษา</th>
+                        <td>@Model.Student.Stu_ID</td>
+                    </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Student.Stu_Name) @Html.DisplayFor(model => model.Student.Stu_Surname)
-        </dd>
+                    <tr>
+                        <th>ชื่อนักศึกษา</th>
+                        <td>@Model.Student.Stu_Title@Model.Student.Stu_Name @Model.Student.Stu_Surname</td>
+                    </tr>
 
+                    <tr>
+                        <th>อาจารย์ที่ปรึกษา</th>
+                        <td>@Model.Teacher.Title.Title_Name@Model.Teacher.Tea_Name @Model.Teacher.Tea_Surname</td>
+                    </tr>
 
-        <dt>
-            อาจารย์ที่ปรึกษา
-        </dt>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Pj_NameTH)</th>
+                        <td>@Html.DisplayFor(model => model.Pj_NameTH)</td>
+                    </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Teacher.Tea_Name) @Html.DisplayFor(model => model.Teacher.Tea_Surname)
-        </dd>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Pj_NameENG)</th>
+                        <td>@Html.DisplayFor(model => model.Pj_NameENG)</td>
+                    </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Pj_NameTH)
-        </dt>
+                    <tr>
+                        <th>วันที่อัพโหลดปริญญานิพนธ์</th>
+                        <td>@Html.DisplayFor(model => model.Pj_Date)</td>
+                    </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Pj_NameTH)
-        </dd>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Pj_TypePj)</th>
+                        <td>@Html.DisplayFor(model => model.Pj_TypePj)</td>
+                    </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Pj_NameENG)
-        </dt>
+                    <tr>
+                        @if (@Model.Pj_File == null)
+                        {
+                            <th>@Html.DisplayNameFor(model => model.Pj_File)</th>
+                            <td>ไม่ได้ใส่ไว้</td>
+                        }
+                        else
+                        {
+                            <th>@Html.DisplayNameFor(model => model.Pj_File)</th>
 
-        <dd>
-            @Html.DisplayFor(model => model.Pj_NameENG)
-        </dd>
+                            <td>
+                                <a class="btn btn-info" target="_blank" href="@Url.Action("ShowPdf","Projects", new { id = Model.Pj_ID })"><i class="fa fa-file-text-o"></i> อ่านงานวิจัย</a>
+                                <a class="btn btn-success" target="_blank" href="@Url.Action("DownloadPdf","Projects", new { id = Model.Pj_ID })"><i class="fa fa-download"></i> ดาวน์โหลดไฟล์งาน</a>
+                            </td>
+                        }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Pj_Date)
-        </dt>
+                    </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Pj_Date)
-        </dd>
+                    <tr>
+                        @if (@Model.Pj_Github == null)
+                        {
+                            <th>@Html.DisplayNameFor(model => model.Pj_Github)</th>
+                            <td>ไม่ได้ใส่ไว้</td>
+                        }
+                        else
+                        {
+                            <th>@Html.DisplayNameFor(model => model.Pj_Github)</th>
+                            <td><a class="btn btn-warning" target="_blank" href=@Model.Pj_Github><i class="fa fa-globe"></i> ดูเว็บไซต์</a></td>
+                        }
+                    </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Pj_TypePj)
-        </dt>
+                    <tr>
+                        @if (@Model.Pj_Linkweb == null)
+                        {
+                            <th>@Html.DisplayNameFor(model => model.Pj_Linkweb)</th>
+                            <td>ไม่ได้ใส่ไว้</td>
+                        }
+                        else
+                        {
+                            <th>@Html.DisplayNameFor(model => model.Pj_Linkweb)</th>
+                            <td><a class="btn btn-warning" target="_blank" href="@Model.Pj_Linkweb"><i class="fa fa-globe"></i> ดูเว็บไซต์</a></td>
+                        }
+                    </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Pj_TypePj)
-        </dd>
+                    <tr>
+                        @if (@Model.Pj_Video == null)
+                        {
+                            <th>
+                                @Html.DisplayNameFor(model => model.Pj_Video)
+                            </th>
 
-        @if (@Model.Pj_File == null)
-        {
-            <dt>
-                @Html.DisplayNameFor(model => model.Pj_File)
-            </dt>
+                            <td>
+                                ไม่ได้ใส่ไว้
+                            </td>
+                        }
+                        else
+                        {
+                            <th>
+                                @Html.DisplayNameFor(model => model.Pj_Video)
+                            </th>
 
-            <dd>
-                ไม่ได้ใส่ไว้
-            </dd>
-        }
-        else
-        {
-            <dt>
-                @Html.DisplayNameFor(model => model.Pj_File)
-            </dt>
+                            <td>
+                                <a target="_blank" href=@Model.Pj_Video>ดูวิดีโอ</a>
+                            </td>
+                        }
+                    </tr>
 
-            <dd>
-                @Html.ActionLink("ดูไฟล์งาน", "ShowPdf", new { id = Model.Pj_ID }, new { target = "_blank" }) |||
-                @Html.ActionLink("ดาวน์โหลดไฟล์งาน", "DownloadPdf", new { id = Model.Pj_ID }, new { target = "_blank" })
-            </dd>
-        }
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Pj_Description)</th>
+                        <td>@Html.DisplayFor(model => model.Pj_Description)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
 
-        @if (@Model.Pj_Github == null)
-        {
-            <dt>
-                @Html.DisplayNameFor(model => model.Pj_Github)
-            </dt>
-
-            <dd>
-                ไม่ได้ใส่ไว้
-            </dd>
-        }
-        else
-        {
-            <dt>
-                @Html.DisplayNameFor(model => model.Pj_Github)
-            </dt>
-
-            <dd>
-                <a target="_blank" href=@Model.Pj_Github>ดูเว็บไซต์</a>
-            </dd>
-        }
-
-        @if (@Model.Pj_Linkweb == null)
-        {
-            <dt>
-                @Html.DisplayNameFor(model => model.Pj_Linkweb)
-            </dt>
-
-            <dd>
-                ไม่ได้ใส่ไว้
-            </dd>
-        }
-        else
-        {
-            <dt>
-                @Html.DisplayNameFor(model => model.Pj_Linkweb)
-            </dt>
-
-            <dd>
-                <a target="_blank" href=@Model.Pj_Linkweb>ดูเว็บไซต์</a>
-            </dd>
-        }
-
-        @if (@Model.Pj_Video == null)
-        {
-            <dt>
-                @Html.DisplayNameFor(model => model.Pj_Video)
-            </dt>
-
-            <dd>
-                ไม่ได้ใส่ไว้
-            </dd>
-        }
-        else
-        {
-            <dt>
-                @Html.DisplayNameFor(model => model.Pj_Video)
-            </dt>
-
-            <dd>
-                <a target="_blank" href=@Model.Pj_Video>ดูวิดีโอ</a>
-            </dd>
-        }
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Pj_Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Pj_Description)
-        </dd>
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Pj_ID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
