--- a/CSManagement/CSManagement/Views/Projects/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Index.cshtml
@@ -3,57 +3,78 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
 }
 
-<h2>Index</h2>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">จัดการข้อมูลปริญญานิพนธ์</h1>
+                    <div style="float:right">
+                        <a class="btn btn-success" href="@Url.Action("Create", "Projects")"><i class="fa fa-plus"></i>เพิ่มผลงานปริญญานิพนธ์</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            ชื่อนักศึกษา
-        </th>
-        <th>
-            ชื่อผลงาน
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Pj_TypePj)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Pj_File)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Pj_Date)
-        </th>
-        <th></th>
-    </tr>
+        <div class="box-body">
+            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th style="text-align:center">ที่</th>
+                        <th style="text-align:center">ชื่อนักศึกษา</th>
+                        <th style="text-align:center">ชื่อผลงาน</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Pj_TypePj)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Pj_File)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Pj_Date)</th>
+                        <th style="text-align:center">จัดการข้อมูล</th>
+                    </tr>
+                </thead>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Student.Stu_Name) @Html.DisplayFor(modelItem => item.Student.Stu_Surname)
-            </td>
-            <td>
-                @Html.ActionLink(@item.Pj_NameTH + " (" + @item.Pj_NameENG + ")", "Details", new { id = item.Pj_ID }, new { target = "_blank" })
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Pj_TypePj)
-            </td>
-            <td>
-                @Html.ActionLink("ดูไฟล์งาน", "ShowPDF", new { id = item.Pj_ID }, new { target = "_blank" })
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Pj_Date)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Pj_ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Pj_ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Pj_ID })
-            </td>
-        </tr>
-    }
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td style="text-align:center">@(i++)</td>
+                            <td>@item.Student.Stu_Title@item.Student.Stu_Name @item.Student.Stu_Surname</td>
+                            <td>@Html.ActionLink(@item.Pj_NameTH,@*" (" + @item.Pj_NameENG + ")"*@ "Details", new { id = item.Pj_ID }, new { target = "_blank" })</td>
+                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.Pj_TypePj)</td>
+                            <td>@Html.ActionLink("ดูไฟล์งาน", "ShowPDF", new { id = item.Pj_ID }, new { target = "_blank" })</td>
+                            <td>@Html.DisplayFor(modelItem => item.Pj_Date)</td>
+                            <td style="text-align:center">
+                                <a class="btn btn-info" href="@item.Pj_Linkweb"><i class="fa fa-globe"></i> ดูเว็บไซต์</a>
+                                @*<a class="btn btn-warning" href="@Url.Action("Edit", "Projects", new { id = item.Pj_ID })"><i class="fa fa-edit"></i>แก้ไข</a>*@
+                                <a class="btn btn-danger" href="@Url.Action("Delete", "Projects", new { id = item.Pj_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
 
-</table>
+<link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+@section Scripts{
+    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#example1').DataTable({
+                scrollCollapse: true,
+                autoWidth: false,
+                responsive: true,
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                },
+                columnDefs: [{
+                    targets: "datatable-nosort",
+                    orderable: false
+                }]
+            });
+        });
+    </script>
+}
