--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -15,9 +15,14 @@
         @* END Search *@
         @* BEGIN Menu *@
     <ul class="sidebar-menu" data-widget="tree">
+        <li class="@Url.IsLinkActive("IndexUser", "Home")">
+            <a href="@Url.Action("IndexUser", "Home")"><i class="fa fa-home"></i> <span>หน้าหลัก</span></a>
+        </li>
+
         <li class="@Url.IsLinkActive("Index", "Home")">
             <a href="@Url.Action("Index", "Home")"><i class="fa fa-home"></i> <span>หน้าหลัก</span></a>
         </li>
+
         <li class="treeview">
             <a href="#">
                 <i class="fa fa-user"></i> <span>จัดการข้อมูลนักศึกษา</span>
