--- a/CSManagement/CSManagement/Views/Students/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "จัดการข้อมูลนักศึกษา";
 }
 
-@using (Html.BeginForm("Create",  "Students" ,FormMethod.Post, new { enctype="multipart/form-data", accept_charset="utf-8" }))
+@using (Html.BeginForm("Create", "Students", FormMethod.Post, new { enctype = "multipart/form-data", accept_charset = "utf-8" }))
 {
     @Html.AntiForgeryToken()
     <section class="content">
@@ -149,8 +149,9 @@
                 </div>
             </div>
 
-        <div class="box-footer">
-            หมายเหตุ : กรุณาตรวจสอบข้อมูลให้ถูกต้องก่อนทำการกดบันทึก
+            <div class="box-footer">
+                หมายเหตุ : กรุณาตรวจสอบข้อมูลให้ถูกต้องก่อนทำการกดบันทึก
+            </div>
         </div>
     </section>
 }
