--- a/CSManagement/CSManagement/Views/Home/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Computer Science";
-    ViewBag.Description = "Home Page";
+    ViewBag.Title = "วิทยาการคอมพิวเตอร์";
+    ViewBag.Description = "หน้าหลัก";
 }
 
 <section class="content">
