--- a/CSManagement/CSManagement/Views/Logins/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Logins/Index.cshtml
@@ -1,39 +1,8 @@
-﻿@model IEnumerable<CSManagement.Models.Login>
-
+﻿
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Log_Pass)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Log_Role)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Log_Pass)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Log_Role)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Log_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Log_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Log_ID })
-        </td>
-    </tr>
-}
-
-</table>
