--- a/CSManagement/CSManagement/Views/Pictures/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Pictures/Index.cshtml
@@ -6,6 +6,10 @@
     }
 </style>
 
+<div style="float:right">
+    <a class="btn btn-success" href="@Url.Action("Create", "Pictures")"><i class="fa fa-plus"></i>เพิ่มรูปภาพ</a>
+</div>
+
 <div id="myCarousel" class="carousel slide vertical" data-ride="carousel" style="overflow: hidden">
     <ol class="carousel-indicators">
         @for (int j = 0; j < ViewBag.Count; j++)
