--- a/CSManagement/CSManagement/Views/Shared/_Layout.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <title>
         @if (!string.IsNullOrWhiteSpace(ViewBag.Title))
         {
-            @ViewBag.Title@: -
+            @ViewBag.Title@:
         }
     </title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
