--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -201,7 +201,7 @@
         }
     </style>
 </head>
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50" >
     <div class="header">
         <div class="row">
             <div class="col-lg-6">
@@ -229,9 +229,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-left">
-                    <li><a href="#myPage">หน้าหลัก</a></li>
+                    <li><a href="@Url.Action("IndexUser", "Home")">หน้าหลัก</a></li>
                     <li><a href="#">บุคคลกร</a></li>
-                    <li><a href="#">ผลงานนักศึกษา</a></li>
+                    <li><a href="@Url.Action("IndexUser", "Projects")">ผลงานนักศึกษา</a></li>
                     <li><a href="#">หลักสูตรสาขา</a></li>
                     <li><a href="#">หลักสูตรอบรม</a></li>
                     <li><a href="#">ประชาสัมพันธ์</a></li>
@@ -241,59 +241,7 @@
         </div>
     </nav>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" style="margin:10px 100px 10px 100px">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="~/img/present1.png" alt="New York" width="1200" height="700">
-            </div>
-
-            <div class="item">
-                <img src="~/img/h1.jpg" alt="Chicago" width="1200" height="700">
-            </div>
-
-            <div class="item">
-                <img src="~/img/h4.jpg" alt="Los Angeles" width="1200" height="700">
-            </div>
-        </div>
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-
-    <div id="myItem" class="card-body text-center" style="margin:0px 100px 0px 100px">
-        <div class="row">
-            <div class="card col-lg-3">
-                <img src="~/img/logo1.png" width="320" height="240" />
-            </div>
-
-            <div class="card col-lg-3">
-                <img src="~/img/logo2.png" width="320" height="240">
-            </div>
-
-            <div class="card col-lg-3">
-                <img src="~/img/logo3.png" width="320" height="240">
-            </div>
-
-            <div class="card col-lg-3">
-                <img src="~/img/logo4.png" width="320" height="240">
-            </div>
-        </div>
-    </div>
+    
 
 
     <div class="content" style="margin:10px 100px 10px 100px">
@@ -305,8 +253,8 @@
     <footer class="text-center">
         <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
             <span class="glyphicon glyphicon-chevron-up"></span>
-        </a><br><br>
-        <h3>วิทยาการคอมพิวเตอร์</h3><p>มหาวิทยาลัยราชภัฏกาญจนบุรี</p>
+        </a>
+        <h3 style="letter-spacing:0px;font-size:30px">วิทยาการคอมพิวเตอร์</h3><p>มหาวิทยาลัยราชภัฏกาญจนบุรี</p>
     </footer>
 
     <script>
