แก้การทำงานหน้า ผู้เยี่ยมชม

--- a/CSManagement/CSManagement/Views/Applieds/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Applieds/Details.cshtml
@@ -45,9 +45,9 @@
             method: "POST",
             success: function (data) {
                 if (data == true) {
-                    alert("การตอบรับเสร็จสิ้น");
+                    alert("การส่งอีเมลล์ตอบรับเสร็จสิ้น");
                 } else {
-                    alert("การตอบรับไม่สำเร็จ");
+                    alert("การส่งอีเมลล์ตอบรับไม่สำเร็จ");
                 }
             }
         })
