--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -1,46 +1,45 @@
-﻿@model IEnumerable<CSManagement.Models.Project>
-
-@{
+﻿@{
 
     ViewBag.Title = "วิทยาการคอมพิวเตอร์";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
+<style>
+    .carousel .item img {
+        margin: 0 auto;
+    }
+</style>
+
 <section class="content">
     <div class="box-default">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
+        <div id="myCarousel" class="carousel slide vertical" data-ride="carousel" style="overflow: hidden">
             <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
+                @for (int j = 0; j < ViewBag.Count; j++)
+                {
+                    <li data-target="#myCarousel" data-slide-to="@j" class="@(j == 0 ? "active" : string.Empty)"></li>
+                }
             </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="~/img/present1.png" alt="New York" width="1200" height="700">
-                </div>
-
-                <div class="item">
-                    <img src="~/img/h1.jpg" alt="Chicago" width="1200" height="700">
-                </div>
-
-                <div class="item">
-                    <img src="~/img/h4.jpg" alt="Los Angeles" width="1200" height="700">
-                </div>
+            <div class="carousel-inner">
+                @{int i = 0;}
+                @foreach (var item in Model)
+                {
+                    i++;
+                    var active = i == 1 ? "active" : "";
+                    <div class="item @active">
+                        <img src="~/imgSlideShow/@item.Pic_Img" style="width: 900px; height: 600px;" />
+                    </div>
+                }
             </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <a class="left carousel-control" data-target="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <a class="right carousel-control" data-target="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
                 <span class="sr-only">Next</span>
             </a>
         </div>
+
     </div>
 
     <div class="box-default">
@@ -59,7 +58,7 @@
                 </div>
 
                 <div class="card col-lg-3">
-                    <a hr="http://register.kru.ac.th/reg/"><img src="~/img/logo4.png" alt="Avatar" style="width:100%"/></a>
+                    <a href="" onclick="window.location.href = '@Url.Action("GoRegister", "Pictures" )'"><img src="~/img/logo4.png" alt="Avatar" style="width:100%" /></a>
                 </div>
             </div>
         </div>
@@ -89,25 +88,35 @@
 
         <p class="page-header text-center" style="font-size:40px"><i class="fa fa-star"></i>ผลงานนักศึกษา<i class="fa fa-star"></i></p>
         <div class="row">
-            <div class="col-md-4">
-                <div class="box box-widget widget-user-2">
-                    <div class="widget-user-header bg-yellow">
-                        <div class="widget-user-image">
-                            <img class="img-circle" img src="~/img/icons8-cat-profile-64.png" />
-                        </div><h3 class="widget-user-username" style="letter-spacing:0px">นางสาวญาณี วงค์ตันฮวด</h3>
-                        <h5 class="widget-user-desc">จัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</h5>
+            @{
+                foreach (var item in ViewBag.ProjectCount)
+                {
+                    <div class="col-md-4">
+                        <div class="box box-widget widget-user-2">
+                            <div class="widget-user-header bg-yellow">
+                                <div class="widget-user-image">
+                                    <img class="img-circle" img src="~/img/icons8-cat-profile-64.png" />
+                                </div>
+                                <h3 class="widget-user-username" style="letter-spacing: 0px">@item.Pj_StuID</h3>
+                                <h5 class="widget-user-desc">จัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</h5>
+                            </div>
+                            <div class="box-footer no-padding">
+                                <ul class="nav nav-stacked">
+                                    <li><a href="@item.Pj_Linkweb">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
+                                    <li>
+                                        <a href="@Url.Action("ShowPdf", "Projects")?id=@item.Pj_ID">
+                                            รูปเล่ม
+                                            <span class="pull-right badge bg-aqua">เข้าชม</span>
+                                        </a>
+                                    </li>
+                                    <li><a href="@item.Pj_Video">วีดีโอ<span class="pull-right badge bg-green">เข้าชม</span></a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                    <div class="box-footer no-padding">
-                        <ul class="nav nav-stacked">
-                            <li><a href="#">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
-                            <li><a href="#">รูปเล่ม<span class="pull-right badge bg-aqua">เข้าชม</span></a></li>
-                            <li><a href="#">วีดีโอ<span class="pull-right badge bg-green">เข้าชม</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+                }
+            }
         </div>
-
     </div>
 </section>
 
@@ -129,25 +138,28 @@
                         toolTipContent: "<b>{label}</b>: {y}%",
                         indexLabel: "{label} {y}%",
                         dataPoints: @Html.Raw(ViewBag.DataPoints)
-    }
-        ]
-            });
-    var chart2 =
-        new CanvasJS.Chart("chartContainer2", {
-            theme: "light2",
-            exportEnabled: true,
-            animationEnabled: true,
-            data: [
-                {
-                    type: "pie", //change type to bar, line, area, pie, etc
-                    startAngle: 180,
-                    toolTipContent: "<b>{label}</b>: {y}%",
-                    indexLabel: "{label} {y}%",
-                    dataPoints: @Html.Raw(ViewBag.DataPoints2)
                     }
                 ]
             });
-    chart.render();
-    chart2.render();
+        var chart2 =
+            new CanvasJS.Chart("chartContainer2", {
+                theme: "light2",
+                exportEnabled: true,
+                animationEnabled: true,
+                data: [
+                    {
+                        type: "pie", //change type to bar, line, area, pie, etc
+                        startAngle: 180,
+                        toolTipContent: "<b>{label}</b>: {y}%",
+                        indexLabel: "{label} {y}%",
+                        dataPoints: @Html.Raw(ViewBag.DataPoints2)
+                    }
+                ]
+            });
+        chart.render();
+        chart2.render();
     };
+
+
+
 </script>
