--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -48,8 +48,8 @@
             }
 
         .carousel-inner img {
-            //-webkit-filter: grayscale(90%);
-            //filter: grayscale(90%); /* make all photos black and white */
+            /*-webkit-filter: grayscale(90%);*/
+            /*filter: grayscale(90%);*/ /* make all photos black and white */
             width: 100%; /* Set width to 100% */
             margin: auto;
         }
@@ -200,8 +200,10 @@
             resize: none;
         }
     </style>
+
+    <script src="https://kit.fontawesome.com/9738106a36.js" crossorigin="anonymous"></script>
 </head>
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50" >
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
     <div class="header">
         <div class="row">
             <div class="col-lg-6">
@@ -214,6 +216,126 @@
                     <a href="http://coms.kru.ac.th/WebLink/" style="color:black"><img src="~/img/email.png" width="20" height="20"> coms.kru.ac.th</a>
                     <a href="" data-toggle="modal" data-target="#modalLRForm" style="color:black"><img src="~/img/login.jpg" width="20" height="20" /> เข้าสู่ระบบ</a>
                 </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="modalLRForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog cascading-modal" role="document">
+
+            <div class="modal-content modal-md">
+                <div class="modal-header modal-md text-center" style="background-color: cornflowerblue;">
+                    @*<img src="~/img/cs1.png" height="100" width="150" />*@
+                    <a style="font-size: 25px; color: white">ระบบจัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</a>
+                </div>
+                <div class="modal-c-tabs">
+                    <ul class="nav nav-tabs md-tabs light-blue darken-3" role="tablist">
+                        <li class="nav-item take-all-space-you-can set-text">
+                            <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab" style="font-size: 20px">
+                                <i class="fas fa-user"></i>
+                                เข้าสู่ระบบ
+                            </a>
+                        </li>
+                        <li class="nav-item take-all-space-you-can set-text">
+                            <a class="nav-link" data-toggle="tab" href="#panel8" role="tab" style="font-size: 20px">
+                                <i class="fas fa-user-plus"></i>
+                                สมัครสมาชิก
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content">
+                        <div class="tab-pane fade in active" id="panel7" role="tabpanel">
+                            <div class="modal-body modal-md">
+                                <form id="FormLogin">
+                                    @Html.AntiForgeryToken()
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                                    @*@Html.Label("username", "รหัสนักศึกษา", new { @class = "control-label col-md-6" })*@
+                                    <div class="form-group ">
+                                        <div class="input-group">
+                                            <div class="input-group-addon">
+                                                <span class="fas fa-id-card"></span>
+                                            </div>
+                                            @Html.Editor("username", new { htmlAttributes = new { @class = "form-control  input-lg", AutoComplete = "off", placeholder = "กรุณาใส่รหัสนักศึกษา" } })
+                                        </div>
+                                        @Html.ValidationMessage("username", "", new { @class = "text-danger", id = "usernameCK1" })
+                                    </div>
+
+                                    @*@Html.Label("password", "รหัสผ่าน", new { @class = "control-label col-md-6" })*@
+                                    <div class="form-group ">
+                                        <div class="input-group">
+                                            <div class="input-group-addon" style="font-size: 15px">
+                                                <span class="fas fa-lock"></span>
+                                            </div>
+                                            @Html.Editor("password", new { htmlAttributes = new { @class = "form-control input-lg", @Type = "password", placeholder = "กรุณาใส่รหัสผ่าน" } })
+                                        </div>
+                                        @Html.ValidationMessage("password", "", new { @class = "text-danger", id = "passwordCK1" })
+                                    </div>
+
+                                    <div class="form-group">
+                                        <div class="text-center">
+                                            <button type="submit" class="btn btn-success input-lg" style="font-size: 20px">เข้าสู่ระบบ</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="panel8" role="tabpanel">
+                            <form id="FormRegister">
+                                @Html.AntiForgeryToken()
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                <div class="modal-body modal-md">
+
+                                    <div class="form-group ">
+                                        <div class="input-group">
+                                            <div class="input-group-addon">
+                                                <span class="fas fa-id-card"></span>
+                                            </div>
+                                            @Html.Editor("username2", new { htmlAttributes = new { @class = "form-control input-lg", AutoComplete = "off", placeholder = "กรุณาใส่รหัสนักศึกษา" } })
+                                        </div>
+                                        @Html.ValidationMessage("username", "", new { @class = "text-danger", id = "usernameCK2" })
+                                    </div>
+
+                                    <div class="form-group ">
+                                        <div class="input-group">
+                                            <div class="input-group-addon">
+                                                <span class="fas fa-lock"></span>
+                                            </div>
+                                            @Html.Editor("password2", new { htmlAttributes = new { @class = "form-control input-lg", @Type = "password", placeholder = "กรุณาใส่รหัสผ่าน" } })
+                                        </div>
+                                        @Html.ValidationMessage("password", "", new { @class = "text-danger", id = "passwordCK2" })
+                                    </div>
+
+                                    <div class="form-group ">
+                                        <div class="input-group">
+                                            <div class="input-group-addon">
+                                                <span class="fas fa-lock"></span>
+                                            </div>
+                                            @Html.Editor("repassword2", new { htmlAttributes = new { @class = "form-control  input-lg", @Type = "password", placeholder = "กรุณาใส่รหัสผ่านอีกครั้ง" } })
+                                        </div>
+                                        @Html.ValidationMessage("repassword", "", new { @class = "text-danger", id = "repasswordCK2" })
+                                    </div>
+
+                                    <div class="form-group ">
+                                        <div class="input-group">
+                                            <div class="input-group-addon">
+                                                <span class="fas fa-user-slash"></span>
+                                            </div>
+                                            @Html.Editor("specailcode", new { htmlAttributes = new { @class = "form-control  input-lg", @Type = "password", placeholder = "รหัสพิเศษ(ไม่มีไม่ต้องใส่)" } })
+                                        </div>
+                                        @Html.ValidationMessage("specailcode", "", new { @class = "text-danger", id = "specialcodeCK2" })
+                                    </div>
+
+                                    <div class="text-center">
+                                        <button type="submit" class="btn btn-info input-lg" style="font-size: 20px">สมัครสมาชิก</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -241,7 +363,7 @@
         </div>
     </nav>
 
-    
+
 
 
     <div class="content" style="margin:10px 100px 10px 100px">
@@ -287,6 +409,82 @@
             });
         })
     </script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(document).on("submit",
+                "#FormLogin",
+                function (e) {
+                    e.preventDefault();
+                    $.ajax({
+                        url: "/Logins/Login",
+                        method: "POST",
+                        data: new FormData(this),
+                        contentType: false,
+                        processData: false,
+                        success: function (data) {
+                            if (data === false) {
+                                document.getElementById("usernameCK1").innerHTML = "ชื่อผู้ใช้หรือรหัสผ่านผิด";
+                                document.getElementById("passwordCK1").innerHTML = "ชื่อผู้ใช้หรือรหัสผ่านผิด";
+                            } else {
+                                window.location.href = "/Home/Index";
+                            }
+                        }
+
+                    },
+                        "json");
+                });
+
+            $("#username").keyup(function () {
+                document.getElementById("usernameCK1").innerHTML = "";
+            });
+
+            $("#password").keyup(function () {
+                document.getElementById("passwordCK1").innerHTML = "";
+            });
+
+        });
+
+        $(document).ready(function () {
+            $(document).on("submit",
+                "#FormRegister",
+                function (e) {
+                    e.preventDefault();
+                    $.ajax({
+                        url: "/Logins/Register",
+                        method: "POST",
+                        data: new FormData(this),
+                        contentType: false,
+                        processData: false,
+                        success: function (data) {
+                            if (data === false) {
+                                document.getElementById("usernameCK2").innerHTML = "กรุณากรอกข้อมูลให้ถูกต้อง";
+                                document.getElementById("passwordCK2").innerHTML = "กรุณากรอกข้อมูลให้ถูกต้อง";
+                                document.getElementById("repasswordCK2").innerHTML = "กรุณากรอกข้อมูลให้ถูกต้อง";
+                            } else {
+                                window.location.href = "/Home/Index";
+                            }
+                        }
+
+                    },
+                        "json");
+                });
+
+            $("#username2").keyup(function () {
+                document.getElementById("usernameCK2").innerHTML = "";
+            });
+
+            $("#password2").keyup(function () {
+                document.getElementById("passwordCK2").innerHTML = "";
+            });
+
+            $("#repassword2").keyup(function () {
+                document.getElementById("repasswordCK2").innerHTML = "";
+            });
+
+        });
+    </script>
+
     <script src="~/Content/js/plugins/jquery.validate/jquery.validate.min.js"></script>
     <script src="~/Content/js/plugins/jquery.validate/jquery.validate.unobtrusive.min.js"></script>
     @RenderSection("Scripts", required: false)
